--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nanoid": "^3.1.16",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hamburger-menu": "^1.2.1",
     "react-icons": "^3.11.0",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.2",
