--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "product-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://boobzzz.github.io/product-list/",
+  "homepage": "https://boobzzz.github.io/gibson-guitars/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "firebase": "^8.2.1",
     "formik": "^2.2.5",
     "gh-pages": "^3.1.0",
     "nanoid": "^3.1.16",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-hamburger-menu": "^1.2.1",
     "react-icons": "^3.11.0",
